--- a/packages/components/code-xpert/style/editor-style.scss
+++ b/packages/components/code-xpert/style/editor-style.scss
@@ -1,5 +1,8 @@
 .np-editor {
   width: 100%;
   height: 100%;
+  .monaco-editor .suggest-details>.monaco-scrollable-element>.body>.header>.type{
+    display: none !important;
+  }
 }
 
